Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextUndefined.quorum
class Main
    action Main
        text v = undefined
        Test(v)
    end

    action Test(text var)
        if var = undefined
            output "passed"
        end
    end
end
