Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberTextField.quorum
class Main
    text v = text
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
